--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "gitdoc.enabled": true
+    "gitdoc.enabled": true,
+    "workbench.preferredDarkColorTheme": "Visual Studio Dark",
+    "window.autoDetectColorScheme": false
 }
